--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,28 @@
+@-webkit-keyframes pulse {
+    0% {background-color: #45CEEF;}
+    25% {background-color: #FFF5A5;}
+    50% {background-color: #FFD4DA;}
+    75% {background-color: #99D2E4;}
+    100% {background-color: #D8CAB4;}
+}
+
 body {
-    background-color: #e6e6e6;
+    -webkit-animation: pulse 80s infinite alternate;
+    background-color: #45CEEF;
+    font-family: 'Oswald', sans-serif;
+}
+
+#masthead {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 40;
+    font-size: 40px;
+    text-align: center;
+    width: 200px;
+    height: 200px;
 }
 
 .game-view {
@@ -15,10 +38,11 @@ body {
     padding: 5px;
 }
 
+
 .game-end-modal {
     width: 300px;
     height: 300px;
-    background-color: white;
+    background-color: #FFF;
     position: absolute;
     top: 0;
     left: 0;
@@ -34,8 +58,9 @@ body {
 
 .new-game {
     height: 20px;
-    background-color: grey;
-    color: white;
+    -webkit-animation: pulse 80s infinite alternate;
+    background-color: #000;
+    color: #000;
     margin: auto;
     padding: 10px;
     position: absolute;
@@ -47,7 +72,7 @@ body {
 }
 
 h1.dialog-box {
-    color: #d0782a;
+    color: #000;
     margin: 30px auto;
     text-align: center;
 }
@@ -58,7 +83,7 @@ h1.dialog-box {
 }
 
 .board-cell {
-    background-color: grey;
+    -webkit-animation: pulse 80s infinite alternate;
     margin: 5px;
     width: 90px;
     height: 90px;
